--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Presentation</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <style type="text/css">
-    @import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
+    @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
 
     body { font-family: 'arial', sans-serif; }
     h1, h2, h3 {
@@ -12,43 +12,36 @@
     }
     .remark-slide-content h1 { font-size: 3em; }
     .remark-slide-content h2 { font-size: 2em; }
-    .remark-slide-content h3 { font-size: 1.5em; }
+    .remark-slide-content h3 { font-size: 1.6em; }
     .footnote {
       position: absolute;
       bottom: 3em;
     }
-    blockquote p {
-      border-left: 3px solid #999;
-      padding-left: 15px;
-    }
     li { font-size: 1.0em;}
-    li p { line-height: 1.8em; font-size: 1.0em; }
+    li p { line-height: 2em; font-size: 1.5em; }
     .red { color: #fa0000; }
     .large { font-size: 2em; }
     a, a > code {
-      color: rgb(249, 38, 114);
+      color: #ff1a75;
       text-decoration: none;
     }
     code {
-      font-family: 'Inconsolata';
-      -web-border-radius: 5px;
-      background: #e7e8e2;
-      border-radius: 5px;
-    }
-    .remark-code, .remark-inline-code { border: 1px solid #555;
-                                        display: block;}
-    .remark-code-line-highlighted     { background-color: #373832; }
-    .pull-left {
-      float: left;
-      width: 47%;
-    }
-    .pull-right {
-      float: right;
-      width: 47%;
-    }
-    .pull-right ~ p {
-      clear: both;
-    }
+        background: #e7e8e2;
+        border-radius: 5px;
+      }
+      .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+      .remark-code-line-highlighted     { background-color: #e7e8e2; }
+      .pull-left {
+        float: left;
+        width: 47%;
+      }
+      .pull-right {
+        float: right;
+        width: 47%;
+      }
+      .pull-right ~ p {
+        clear: both;
+      }
     #slideshow .slide .content code {
       font-size: 1.2em;
     }
