--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
     </style>
 </head>
 <body>
-  <script src="http://gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript"></script>
+  <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript"></script>
+  <!-- http://gnab.github.io/remark/downloads/remark-latest.min.js -->
   <script type="text/javascript">
     var slideshow = remark.create({sourceUrl: "README.md"});
   </script>
